<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="24dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/materialCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_place_photo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_place_name"
            style="@style/Poppins.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/card_place_name"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/materialCardView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_place_country"
            style="@style/Poppins.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/card_place_city"
            app:layout_constraintStart_toEndOf="@+id/materialCardView"
            app:layout_constraintTop_toBottomOf="@+id/tv_place_name" />

        <ImageView
            android:id="@+id/ivStar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="64dp"
            android:src="@drawable/baseline_star_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_detail_place_rating"
            style="@style/Poppins.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/card_place_rating"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivStar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.522" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>